--- a/index.html
+++ b/index.html
@@ -4,12 +4,75 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>[insert name] Portifolio</title>
+  <title>Personal Portfolio Website - Easy Tutorials</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello, my name is Ken. 
+  <div id="header">
+    <div class="container">
+      <nav>
+        <img src="images/logo.png" class="logo">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="header-text">
+        <p>UI/UX Designer</p>
+        <h1>Hi, I'm <span>Kevin</span><br>Jen From Australia</h1>
+      </div>
+    </div>
+  </div> 
+<!-- -----------about--------- -->
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="images/user.png">
+        </div>
+        <div class="about-col-2">
+          <h1 class="sub-title">About Me</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan. Integer quis lacus quam. Praesent mollis magna quis felis dignissim, sit amet accumsan ligula fringilla. Sed tempor tellus vel mauris auctor facilisis. Maecenas elit lacus, ultrices mollis eleifend sit amet, egestas at nisi. Nullam aliquam erat sem. Phasellus ac sagittis risus, vel porttitor ante. In accumsan velit et magna tristique, at rutrum nulla volutpat. Cras mollis rutrum faucibus. Integer congue posuere dolor, quis bibendum sapien iaculis sed. Nulla vitae elit iaculis, aliquet est at, rutrum leo. Nunc posuere pretium gravida. Pellentesque in sapien aliquet, gravida tortor ut, tincidunt lectus. Quisque euismod rhoncus dolor.</p>
+
+          <div class="tab-titles">
+            <p class="tab-links active-link">Skills</p>
+            <p class="tab-links">Experience</p>
+            <p class="tab-links">Education</p>
+          </div>
+          
+          <div class="tab-contents active-tab">
+            <ul>
+              <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+              <li><span>Web Development</span><br>Web app Development</li>
+              <li><span>App Development</span><br>Building Android/iOS apps</li>
+            </ul>
+          </div>
+          <div class="tab-contents">
+            <ul>
+              <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
+              <li><span>2019 - 2021</span><br>Team lead at StartApp LLC.</li>
+              <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+              <li><span>2016 - 2017</span><br>Internship at ekart eCommerce</li>
+            </ul>
+          </div>
+          <div class="tab-contents">
+            <ul>
+              <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
+              <li><span>2016</span><br>MBA from MIT Bangalore.</li>
+              <li><span>2014</span><br>BBA from ISM Bangalore.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  
   <script src="script.js"></script>
 </body>
 
