--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Personal Portfolio Website - Easy Tutorials</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/d9dc368d02.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,13 +14,15 @@
     <div class="container">
       <nav>
         <img src="images/logo.png" class="logo">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+        <ul id="sidemenu">
+          <li><a href="#header">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
         </ul>
+        <i class="fa-solid fa-bars" onclick="openMenu()"></i>        
       </nav>
       <div class="header-text">
         <p>UI/UX Designer</p>
@@ -39,19 +42,19 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan. Integer quis lacus quam. Praesent mollis magna quis felis dignissim, sit amet accumsan ligula fringilla. Sed tempor tellus vel mauris auctor facilisis. Maecenas elit lacus, ultrices mollis eleifend sit amet, egestas at nisi. Nullam aliquam erat sem. Phasellus ac sagittis risus, vel porttitor ante. In accumsan velit et magna tristique, at rutrum nulla volutpat. Cras mollis rutrum faucibus. Integer congue posuere dolor, quis bibendum sapien iaculis sed. Nulla vitae elit iaculis, aliquet est at, rutrum leo. Nunc posuere pretium gravida. Pellentesque in sapien aliquet, gravida tortor ut, tincidunt lectus. Quisque euismod rhoncus dolor.</p>
 
           <div class="tab-titles">
-            <p class="tab-links active-link">Skills</p>
-            <p class="tab-links">Experience</p>
-            <p class="tab-links">Education</p>
+            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+            <p class="tab-links" onclick="opentab('education')">Education</p>
           </div>
           
-          <div class="tab-contents active-tab">
+          <div class="tab-contents active-tab" id="skills">
             <ul>
               <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
               <li><span>Web Development</span><br>Web app Development</li>
               <li><span>App Development</span><br>Building Android/iOS apps</li>
             </ul>
           </div>
-          <div class="tab-contents">
+          <div class="tab-contents" id="experience">
             <ul>
               <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
               <li><span>2019 - 2021</span><br>Team lead at StartApp LLC.</li>
@@ -59,7 +62,7 @@
               <li><span>2016 - 2017</span><br>Internship at ekart eCommerce</li>
             </ul>
           </div>
-          <div class="tab-contents">
+          <div class="tab-contents" id="education">
             <ul>
               <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
               <li><span>2016</span><br>MBA from MIT Bangalore.</li>
@@ -70,10 +73,115 @@
       </div>
     </div>
   </div>
-
-
+<!-- --------------service------------- -->
+<div id="services">
+  <div class="container">
+    <h1 class="sub-title">My Services</h1>
+    <div class="services-list">
+      <div>
+        <i class="fa-solid fa-code"></i>
+        <h2>Web Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan. </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div>
+        <i class="fa-solid fa-crop"></i>
+        <h2>UI/UX Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan. </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div>
+        <i class="fa-brands fa-app-store"></i>
+        <h2>App Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan. </p>
+        <a href="#">Learn more</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- --------------<portfolio>------------------ -->
+<div id="portfolio">
+  <div class="container">
+    <h1 class="sub-title">My Work</h1>
+    <div class="work-list">
+      <div class="work">
+        <img src="images/work-1.png">
+        <div class="layer">
+          <h3>Social Media App</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan.</p>
+          <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work-2.png">
+        <div class="layer">
+          <h3>Music App</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan.</p>
+          <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work-3.png">
+        <div class="layer">
+          <h3>Shopping App</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat tempor accumsan.</p>
+          <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn">See more</a>
+  </div>
+</div>  
+<!-- -------------contact------------- -->
+<div id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="contact-left">
+        <h1 class="sub-title">Contact Me</h1>
+        <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
+        <p><i class="fa-solid fa-square-phone"></i>0123456789</p>
+        <div class="social-icons">
+          <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+      </div>
+      <div class="contact-right">
+        <form name='submit-to-google-sheet'>
+          <input type="text" name="Name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+          <button type="submit" class="btn btn2">Submit</button>
+        </form>
+        <span id="msg"></span>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>Copyright © Kevin. Made with <i class="fa-solid fa-heart"></i> by Easy Tutorials</p>
+  </div>
+</div>
   
   <script src="script.js"></script>
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwb1J85ypkDwE1g3ShgzjIGDeQrzuRRVUApiqo2BuOlASRBlorCijrHbeaoF0lp0-aWBQ/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg =document.getElementById('msg')
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {msg.innerHTML = "Message sent successfully"
+                          setTimeout(function(){
+                            msg.innerHTML = ""
+                          }, 5000)
+                           form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 
 </html>
